--- a/tps/tp4/tp4.tex
+++ b/tps/tp4/tp4.tex
@@ -164,7 +164,7 @@ python localization.py -h
 		\item observación: $[\theta_{bearing}]$
 	\end{itemize}
 	
-	\section{Notas}
+	\subsection{Notas}
 	\begin{itemize}
 		\item Llamar a \lstinline[style=bash]{utils.minimized_angle} cada vez que un ángulo o una diferencia de ángulo pueda exceder $[-\pi, \pi]$.
 		\item Utilizar el muestreador sistemático de baja varianza de clase. Te da una distribución más suave de partículas y también requiere un único número aleatorio por paso de remuestreo.
