Add imu and slam images

--- a/teoricas/teorica_08/src/slam.tex
+++ b/teoricas/teorica_08/src/slam.tex
@@ -28,6 +28,17 @@
 \end{frame}
 
 \begin{frame}
+	\frametitle{¿Qué es SLAM?}
+	
+	Para que un robot móvil pueda navegar de manera autónoma es necesario que conozca su ubicación y cuente con una representación del entorno donde se encuentra. Estos problemas se conocen como el problema Localización y el problema de Mapeo. En el caso más general, donde no se cuenta con un la localización del robot ni con un mapa a priori del entorno, dichas problemas se abordan de manera simultánea. Esto da origen al problema de SLAM (\emph{Simultaneous Localizacion and Mapping}).
+	\begin{block}{}
+		SLAM es el problema de resolver la localización y el mapeo al mismo tiempo.
+	\end{block}
+	
+\end{frame}
+
+
+\begin{frame}
     \frametitle{Ejemplo de SLAM}
     
     \begin{figure}
@@ -154,3 +165,11 @@
     \end{figure}
     
 \end{frame}
+
+\begin{frame}
+	\frametitle{Aquitectura general de SLAM}
+	
+
+	
+\end{frame}
+
