Improve slam slides

--- a/teoricas/teorica_08/src/slam.tex
+++ b/teoricas/teorica_08/src/slam.tex
@@ -169,7 +169,9 @@
 \begin{frame}
 	\frametitle{Aquitectura general de SLAM}
 	
-
+	\begin{figure}[!h]
+			\includegraphics[width=\textwidth]{images/slam_frontend_backend.pdf}
+	\end{figure}
 	
 \end{frame}
 
