--- a/teoricas/teorica_03/src/imu.tex
+++ b/teoricas/teorica_03/src/imu.tex
@@ -144,6 +144,10 @@
     \frametitle{IMU (Inertial Measurement Unit)}
     \note{página 122 del libro Introduction to autonomous mobile robots 2nd edition}
     
+    \begin{figure}[!h]
+            \includegraphics[width=0.2\columnwidth]{images/imu.pdf}
+    \end{figure}
+    
     \begin{itemize}
         \item 3 giróscopos ortogonales y 3 acelerómetros ortogonales.
         \item Permite estimar: posición, orientación, velocidad lineal, velocidad angular y aceleración 
