--- a/teoricas/teorica_08/src/slam.tex
+++ b/teoricas/teorica_08/src/slam.tex
@@ -210,6 +210,10 @@
         \item La minimización optimiza las poses del robot y la ubicación del los landmarks
         \item Observar áreas previamente vistas genera restricciones en el grafo
     \end{itemize}
+
+	\begin{figure}[!h]
+        \includegraphics[width=0.3\textwidth]{images/slam-landmarks.pdf}
+    \end{figure}
     
 \end{frame}
 
