Improve SLAM slides

--- a/common/bibliography.bib
+++ b/common/bibliography.bib
@@ -251,3 +251,29 @@
     address = {New York, NY, USA},
     doi={10.1017/CBO9780511811685}
 }
+
+% A Tutorial on Graph-Based SLAM
+@ARTICLE{grisetti2010tutorial,
+    author={Grisetti, Giorgio and Kümmerle, Rainer and Stachniss, Cyrill and Burgard, Wolfram},
+    journal={IEEE Intelligent Transportation Systems Magazine}, 
+    title={\href{https://doi.org/10.1109/MITS.2010.939925}{A Tutorial on Graph-Based SLAM}}, 
+    year={2010},
+    volume={2},
+    number={4},
+    pages={31--43},
+    doi={10.1109/MITS.2010.939925}
+}
+
+@ARTICLE{chebrolu2021adaptive,
+    author={Chebrolu, Nived and Läbe, Thomas and Vysotska, Olga and Behley, Jens and Stachniss, Cyrill},
+    journal=RAL, 
+    title={\href{https://doi.org/10.1109/LRA.2021.3061331}Adaptive Robust Kernels for Non-Linear Least Squares Problems}}, 
+    year={2021},
+    volume={6},
+    number={2},
+    pages={2240--2247},
+    doi={10.1109/LRA.2021.3061331}
+}
+
+
+
