--- a/teoricas/teorica_08/src/bibliography.tex
+++ b/teoricas/teorica_08/src/bibliography.tex
@@ -1,6 +1,14 @@
 \begin{frame}
 	\frametitle{Bibliografía}
-	\nocite{thrun2005probabilistic}
+    
+    \begin{itemize}
+        \item Capítulo 46 de \cite{siciliano2016handbook}
+        \item Capítulo 10 de \cite{thrun2005probabilistic}
+    \end{itemize}    
+
+    \nocite{grisetti2010tutorial}
+    \nocite{chebrolu2021adaptive}
+
 	
 	\printbibliography
 	
