Add factor graph image

--- a/common/bibliography.bib
+++ b/common/bibliography.bib
@@ -254,7 +254,7 @@
 
 % A Tutorial on Graph-Based SLAM
 @ARTICLE{grisetti2010tutorial,
-    author={Grisetti, Giorgio and Kümmerle, Rainer and Stachniss, Cyrill and Burgard, Wolfram},
+    author={Grisetti, Giorgio and K{\"u}mmerle, Rainer and Stachniss, Cyrill and Burgard, Wolfram},
     journal={IEEE Intelligent Transportation Systems Magazine}, 
     title={\href{https://doi.org/10.1109/MITS.2010.939925}{A Tutorial on Graph-Based SLAM}}, 
     year={2010},
@@ -264,15 +264,27 @@
     doi={10.1109/MITS.2010.939925}
 }
 
+% Adaptive Robust Kernels for Non-Linear Least Squares Problems
 @ARTICLE{chebrolu2021adaptive,
-    author={Chebrolu, Nived and Läbe, Thomas and Vysotska, Olga and Behley, Jens and Stachniss, Cyrill},
+    author={Chebrolu, Nived and L{\"a}be, Thomas and Vysotska, Olga and Behley, Jens and Stachniss, Cyrill},
     journal=RAL, 
-    title={\href{https://doi.org/10.1109/LRA.2021.3061331}Adaptive Robust Kernels for Non-Linear Least Squares Problems}}, 
+    title={\href{https://doi.org/10.1109/LRA.2021.3061331} {Adaptive Robust Kernels for Non-Linear Least Squares Problems}}, 
     year={2021},
     volume={6},
     number={2},
     pages={2240--2247},
     doi={10.1109/LRA.2021.3061331}
+}
+
+% Factor Graphs for Robot Perception
+@BOOK{dellaert2017factor,
+    author={Dellaert, Frank and Kaess, Michael},
+    booktitle={\href{https://doi.org/10.1561/2300000043}{Factor Graphs for Robot Perception}},
+    year={2017},
+    volume={},
+    number={},
+    pages={1--154},
+    doi={10.1561/2300000043}
 }
 
 
