Improve mapping slides

--- a/teoricas/teorica_07/src/bibliography.tex
+++ b/teoricas/teorica_07/src/bibliography.tex
@@ -1,13 +1,13 @@
 \begin{frame}
 	\frametitle{Bibliografía}
    
-    Static state binary Bayes filter
+    Static state binary Bayes filter:
     
-    Thrun et al.: “Probabilistic Robotics”, Chapter 4.2
+    Capítulo 4.2 de \cite{thrun2005probabilistic}
     
-    Occupancy Grid Mapping
+    Occupancy Grid Mapping:
     
-    Thrun et al.: “Probabilistic Robotics”, Chapter 9.1+9.2
+    Capítulo 9.1 y 9.2 de \cite{thrun2005probabilistic}
 	
 	\printbibliography
 	
