improve mapping slides

--- a/teoricas/teorica_07/src/mapping.tex
+++ b/teoricas/teorica_07/src/mapping.tex
@@ -545,15 +545,21 @@ tenemos entonces:
 	\frametitle{Forward measurement model vs inverse measurement model}
 	\note{información extraída de https://youtu.be/v-Rm9TUG9LA}
 	
-	The occupancy grid mapping algorithm requires a marginalized inverse measurement model, $p(\map_{i}|\state, \observation )$. This probability is called inverse since it reasons from effects to causes: it provides information about the world conditioned on a measurement caused by this world.
+	%The occupancy grid mapping algorithm requires a marginalized inverse measurement model, $p(\map_{i}|\state, \observation )$. This probability is called inverse since it reasons from effects to causes: it provides information about the world conditioned on a measurement caused by this world.
 	
-	Inverse models are often used in situations where measurements are more complex than the binary state. An example of such a situation is the problem of estimating whether or not a door is closed from camera images. Here the state is extremely simple, but the space of all measurements is huge. It is easier to devise a function that calculates a probability of a door being closed from a camera image, than describing the distribution over all camera images that show a closed door. In other words, it is easier to implement an inverse than a forward sensor model.
+	El algoritmo \emph{occupancy grid mapping} requiere un modelo marginalized inverse measurement model, $p(\map_{i}|\state, \observation )$. Esta probabilidad se llama inversa ya que razona de efectos a causas: proporciona información sobre el mundo condicionada a una medida provocada por este mundo.
+	
+	%Inverse models are often used in situations where measurements are more complex than the binary state. An example of such a situation is the problem of estimating whether or not a door is closed from camera images. Here the state is extremely simple, but the space of all measurements is huge. It is easier to devise a function that calculates a probability of a door being closed from a camera image, than describing the distribution over all camera images that show a closed door. In other words, it is easier to implement an inverse than a forward sensor model.
+	
+	
+	Los \emph{inverse models} se utilizan a menudo en situaciones en las que las medidas son más complejas que el estado binario. Un ejemplo de tal situación es el problema de estimar si una puerta está cerrada o no a partir de imágenes de una cámara. Aquí el estado es extremadamente simple, pero el espacio de todas las mediciones es enorme. Es más fácil entonces idear una función que calcule la probabilidad de que una puerta este cerrada a partir de una imagen, que describir la distribución de probabilidad sobre todas las imágenes que muestran una puerta cerrada. En otras palabras, es más fácil implementar un modelo de sensor inverso que uno directo.
+	
 	
 	forward measurement model vs inverse measurement model
 	\url{https://www.cs.cmu.edu/~thrun/papers/thrun.occ-journal.pdf}
 	\url{http://robots.stanford.edu/papers/thrun.iros01-occmap.pdf}
 	
-	Forward models describe the physics of the environment, from causes (occupancy) to effects (measurements). They will be denoted $p(\observation | \map)$.
+	Los forward models describen la física del entorno, desde las causas (ocupación) hasta los efectos (medidas). Son denotados $p(\observation | \map)$.
 	
 \end{frame}
 
