--- a/teoricas/teorica_08/src/slam.tex
+++ b/teoricas/teorica_08/src/slam.tex
@@ -240,9 +240,9 @@
         \end{equation*}
     \end{block}
 
-    Los grafos de factores nos permiten representar una distribución de probabilidad conjunta (distribución que gobierna sobre todas las variables) como un producto de probabilidades más chicas (que dependen de un menor número de variables).
-    
-    Al igual que las redes de bayes o redes de markov, podemos utilizar los Factor-graph para describir relaciones de independencia entre variables. Y podemos correr diferentes algoritmos sobre estos factor-graphs para inferir información de una manera eficiente.
+    \begin{figure}
+        \includegraphics[width=0.5\textwidth]{images/factor_graph_example.pdf}
+    \end{figure}
 
     \note{Por ejemplo, si la función g depende de 10 variables podemos descomponerla en el profucto de varias funciones f, donde cada función f depende de un subconjunto de esas variables.}
     
@@ -253,10 +253,10 @@
     \frametitle{Factor-Graph}
     \note{Información extraída de https://youtu.be/uuiaqGLFYa4}
     
-    
-    Los Factor-Graph nos permiten representar una distribución de probabilidad conjunta (distribución que gobierna sobre todas las variables) como un producto de probabilidades más chicas (que dependen de un menor número de variables).
-    
-    Al igual que las redes de bayes o redes de markov, podemos utilizar los Factor-Graph para describir relaciones de independencia entre variables. Y podemos correr diferentes algoritmos sobre estos Factor-Graph para inferir información de una manera eficiente.
+    \begin{itemize}
+        \item Los Factor-Graph nos permiten representar una distribución de probabilidad conjunta (distribución que gobierna sobre todas las variables) como un producto de probabilidades más chicas (que dependen de un menor número de variables).
+        \item Al igual que las redes de Bayes o redes de Markov, podemos utilizar los Factor-Graph para describir relaciones de independencia entre variables. Y podemos correr diferentes algoritmos sobre estos Factor-Graph para inferir información de una manera eficiente.
+    \end{itemize}
     
     \note{Por ejemplo, si la función g depende de 10 variables podemos descomponerla en el profucto de varias funciones f, donde cada función f depende de un subconjunto de esas variables.}
     
