Add factor edge example image

--- a/teoricas/teorica_08/src/slam.tex
+++ b/teoricas/teorica_08/src/slam.tex
@@ -240,7 +240,7 @@
         \end{equation*}
     \end{block}
 
-    \begin{figure}
+    \begin{figure}[!h]
         \includegraphics[width=0.7\textwidth]{images/factor_graph_example.pdf}
     \end{figure}
 
@@ -267,6 +267,10 @@
 \begin{frame}
     \frametitle{Graph-based SLAM usando Pose-Graph}
     \note{Información extraída de https://youtu.be/uHbRKvD8TWg}
+    
+    \begin{figure}[!h]
+        \includegraphics[width=0.7\textwidth]{images/factor_graph_edge_example.pdf}
+    \end{figure}
     
 \end{frame}
 
