Add frontend backend graph image

--- a/teoricas/teorica_08/src/slam.tex
+++ b/teoricas/teorica_08/src/slam.tex
@@ -269,7 +269,7 @@
     \frametitle{Graph-based SLAM usando Pose-Graph}
     \note{Información extraída de https://youtu.be/uHbRKvD8TWg}
     \begin{itemize}
-        content...
+		\item asdf
     \end{itemize}
     
 \end{frame}
@@ -303,6 +303,19 @@
         \end{column}
     \end{columns}
     
+\end{frame}
+
+\begin{frame}
+	\frametitle{Graph-based SLAM usando Pose-Graph}
+	\note{Información extraída de https://youtu.be/uHbRKvD8TWg}
+	\begin{itemize}
+		\item asdf
+	\end{itemize}
+	
+	\begin{figure}[!h]
+		\includegraphics[width=\textwidth]{images/slam_frontend_backend_graph.pdf}
+	\end{figure}
+	
 \end{frame}
 
 \begin{frame}
